# Trading-Agent

./: .gitignore  CONFIGURABLE_PARAMETERS.md  DEEP_LEARNING_COMPONENT_DOCUMENTATION.md  DEVELOPER_DOCUMENTATION.md  END_TO_END_TEST_REPORT.md  ENHANCED_DL_DOCUMENTATION.md  EXECUTION_OPTIMIZATION_DOCUMENTATION.md  HFT_ENHANCEMENT_PLAN.md  HFT_TASKS.md  ONBOARDING.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_REPORT_UPDATED.md  QUICKSTART.md  README.md  README_ERROR_HANDLING.md  README_PERFORMANCE_OPTIMIZATION.md  README_RL_FRAMEWORK.md  RELEASE_NOTES.md  RL_FRAMEWORK_USER_GUIDE.md  SYSTEM_DOCUMENTATION.md  SYSTEM_DOCUMENTATION_UPDATED.md  advanced_chart_component.py  advanced_visualization_architecture.md  api_key_service.py  architecture_summary.md  autonomous_trading_analysis.md  benchmark_utils.py  build.sh  code_validation.md  comprehensive_improvement_report.md  comprehensive_system_analysis.md  comprehensive_test_report.md  core_scripts_analysis.md  create_debug_wrapper.py  dashboard_ui.py  dashboard_validation_report.md  data_collection_analysis.md  debug_end_to_end_test.py  debug_env.py  debug_parameter_validation.py  (+171 more)
benchmark_results/: benchmark_20250531_181030.json
boilerplate/rust/market-data-processor/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.mock  Dockerfile.python  Dockerfile.simple  Dockerfile.test  Dockerfile.windows  README.md  authenticated_test.py  build.rs  dashboard_preview.html  debug_docker.ps1  direct_deploy.ps1  docker-compose.core.yml  docker-compose.dashboard.yml  docker-compose.debug.yml  docker-compose.fixed.yml  docker-compose.mdp.yml  docker-compose.minimal.yml  docker-compose.mock.yml  docker-compose.simple.v2.yml  docker-compose.simple.yml  docker-compose.windows.yml  docker-compose.working.yml  docker-compose.yml  fix_docker_build.ps1  flexible_market_data.py  improved_auth_test.py  integration_test.py  launch.sh  launch_dashboard.ps1  launch_dashboard_wsl.ps1  launch_system.ps1  mdp_metrics.py  metrics_server.py  mexc_api.py  prometheus.yml  (+13 more)
boilerplate/rust/market-data-processor/benches/: benchmarks.rs
boilerplate/rust/market-data-processor/config/: default.toml  development.toml
boilerplate/rust/market-data-processor/dashboard/: README.md  package-lock.json  package.json
boilerplate/rust/market-data-processor/docs/: PERFORMANCE_BENCHMARKING.md  WSL2_SETUP_GUIDE.md  testing_framework.md
boilerplate/rust/market-data-processor/mock_server/: Cargo.toml
boilerplate/rust/market-data-processor/proto/: market_data.proto
boilerplate/rust/market-data-processor/src/: lib.rs  main.rs  websocket.rs
hft_execution_engine/: Cargo.toml
hft_execution_engine/src/: lib.rs
hft_execution_engine/src/orderbook/: analytics.rs  mod.rs  types.rs
hft_execution_engine/src/signals/: mean_reversion.rs  mod.rs  momentum_signals.rs  pattern_recognition.rs  signal_aggregator.rs  tick_processor.rs
(+384 files in other folders)
