[package]
name = "hft_execution_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance execution engine for ultra-fast trading"
authors = ["Trading-Agent Team"]

[lib]
name = "hft_execution_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# API and networking
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
url = "2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency and performance
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.7"

# FFI and Python bindings
pyo3 = { version = "0.19", features = ["extension-module"] }

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
mockito = "1.1"
rstest = "0.17"

[[bench]]
name = "execution_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
