[package]
name = "market-data-processor"
version = "0.1.0"
edition = "2021"
authors = ["MEXC Trading System Team"]
description = "Market Data Processor for MEXC Trading System"

# Create a library target for integration tests
[lib]
name = "market_data_processor"
path = "src/lib.rs"
doctest = true

# Integration test library target
[[test]]
name = "market_data_processor_tests"
path = "tests/integration/mod.rs"
harness = false

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.19"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.18"
url = "2.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
config = "0.13"
dotenv = "0.15"
lazy_static = "1.4"
prometheus = "0.13"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
lapin = "2.1"
redis = { version = "0.22", features = ["tokio-comp"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
proptest = "1.1"

[build-dependencies]
tonic-build = "0.9"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
